[project]
name = "aichat"
version = "0.1.0"
description = ""
authors = [{ name = "Kurtis Fields", email = "kurtisfields@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru ==0.7.0",
    "google-generativeai ==0.1.0rc3",
    "python-dotenv ==1.0.0",
    "langchain ==0.0.174",
    "openai ==0.27.7"
]

[tool.setuptools]
packages=["aichat"]

[tool.attacus]
flutter_assets = "aichat/flutter_assets"